2011-03-09  Werner Koch  <wk@g10code.com>

	* kdf.c: New.

2011-02-22  Werner Koch  <wk@g10code.com>

	* rijndael.c (aesni_cleanup_2_4): New.
	(aesenc_xmm1_xmm0, do_aesni_ctr_4): New.
	(_gcry_aes_ctr_enc): New.
	* cipher.c (struct gcry_cipher_handle): Add CTR_ENC.  Move field
	CTR into an u_ctr union and adjust all users.
	(gcry_cipher_open): Use _gcry_aes_ctr_enc.
	(do_ctr_encrypt): Use bulk mode.

2011-02-18  Werner Koch  <wk@g10code.com>

	* rijndael.c (u32_a_t): New.
	(do_encrypt_aligned, do_encrypt_aligned): Use the new type to
	avoid problems with strict aliasing rules.

2011-02-16  Werner Koch  <wk@g10code.com>

	* rijndael.c (do_aesni_cfb) [USE_AESNI]: New.
	(_gcry_aes_cfb_enc, _gcry_aes_cfb_dec) [USE_AESNI]: Use new fucntion.

2011-02-15  Werner Koch  <wk@g10code.com>

	* rijndael.c (do_aesni_enc_aligned, do_aesni_dec_aligned): Use
	movdqa for the key but keep using movdqu for the data.
	(do_aesni): Remove alignment detection.  Don't burn the stack.
	(aesni_prepare, aesni_cleanup): New macros.
	(rijndael_encrypt, _gcry_aes_cfb_enc, _gcry_aes_cbc_enc)
	(rijndael_decrypt, _gcry_aes_cfb_dec, _gcry_aes_cbc_dec): Use
	these macros.  Don't burn the stack in the USE_AESNI case.
	(do_setkey): Add disabled code to use aeskeygenassist.

2011-02-14  Werner Koch  <wk@g10code.com>

	* rijndael.c (ATTR_ALIGNED_16): New
	(do_aesni): Do not copy if already aligned.
	(do_encrypt, do_decrypt): Ditto.
	(rijndael_decrypt, rijndael_encrypt): Increase stack burning amount.

	* rijndael.c (RIJNDAEL_context): Reorder fields.  Change fieldname
	ROUNDS to rounds.  Move padlock_key into u1.
	(keySched, keySched2): Rename macros to keyscherr and keyschdec
	and change all users.
	(padlockkey): New macro.  Change all users of padlock_key.
	* cipher.c (NEED_16BYTE_ALIGNED_CONTEXT): Always define if using gcc.
	(struct gcry_cipher_handle): Align U_IV to at least 16 byte.

2011-02-13  Werner Koch  <wk@g10code.com>

	* rijndael.c (USE_AESNI): New.  Define for ia32 and gcc >= 4.